--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 2020-04-04  Kingpin  <martin@ubuntu>
 
+	* lib/WWW/Search/Ebay.pm (_get_result_count_elements): new HTML patterns
+
 	* lib/WWW/Search/Ebay/Motors.pm: removed because cars are no longer searchable via simple CGI parameters
 	* lib/WWW/Search/Ebay/Stores.pm: removed because stores are no longer searchable via simple CGI parameters
 
